--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ main {
   content: "";
   position: absolute;
   right: -340px;
-  bottom: 300px;
+  top: 300px;
   width: 720px;
   height: 720px;
   background: url("../assets/sun.png") no-repeat center;
