--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ main {
   content: "";
   position: absolute;
   left: 0px;
-  top: 40px;
+  top: 50%;
   width: 600px;
   height: 1200px;
   background: url("../assets/leaves.png") no-repeat left top;
@@ -504,11 +504,11 @@ main {
   .button { width: 100%; text-align: center; }
 
   .section:nth-of-type(even)::before {
-    left: -95px;
-    top: 10px;
-    width: 240px;
-    height: 420px;
-    opacity: 0.10;
+    left: 0px;
+    top: 50%;
+    width: 600px;
+    height: 1200px;
+    opacity: 0.80;
   }
 
   .hero::after {
@@ -530,10 +530,10 @@ main {
   .hero { padding-top: 6rem; padding-bottom: 6rem; }
 
   .section:nth-of-type(even)::before {
-    left: -110px;
-    top: -10px;
-    width: 340px;
-    height: 620px;
-    opacity: 0.12;
+    left: 0px;
+    top: 50%;
+    width: 600px;
+    height: 1200px;
+    opacity: 0.80;
   }
 }
